// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`set/unset > basic nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
]
`;

exports[`set/unset > deep nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "products[_key==\\"item-1\\"].comparisonFields[\\"support-level\\"]": "advanced",
        "products[_key==\\"item-1\\"].variants[_key==\\"variant-1\\"][\\"lace-type\\"]": "slick",
      },
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "products[_key==\\"item-1\\"].variants[_key==\\"variant-2\\"][\\"lace-type\\"]",
      ],
    },
  },
]
`;

exports[`set/unset > set + unset, image example 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "image.asset._ref": "image-b",
        "image.crop.bottom": 0.1,
        "image.crop.left": 0.2,
        "image.crop.right": 0.2,
        "image.crop.top": 0.1,
        "image.hotspot.height": 0.75,
        "image.hotspot.width": 0.75,
        "image.hotspot.x": 0.48,
      },
    },
  },
]
`;

exports[`set/unset > set + unset, nested changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "arr[1]": null,
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
]
`;

exports[`set/unset > simple root-level changes 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "rating": 4,
        "title": "Die Hard with a Vengeance",
      },
    },
  },
]
`;
